--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -11,7 +11,10 @@
   margin: 20px auto;
   padding: 0 20px;
 }
-
+.app_body {
+  display: flex;
+  justify-content: space-between;
+}
 .app h2 {
   text-align: center;
   text-transform: uppercase;
@@ -25,6 +28,12 @@
     rgba(112, 112, 171, 1) 21%,
     rgba(72, 255, 177, 1) 100%
   );
+  border-radius: 20px;
+  padding: 20px;
+  width: 45%;
+  margin-top: 40px;
+}
+.expensedetail {
   border-radius: 20px;
   padding: 20px;
   width: 45%;
@@ -54,4 +63,28 @@ button {
   border: 2px solid maroon;
   background-color: rgb(138, 9, 9);
   cursor: pointer;
+}
+.income {
+  background: rgb(245, 242, 81);
+  background: linear-gradient(
+    180deg,
+    rgba(245, 242, 81, 1) 16%,
+    rgba(244, 146, 108, 1) 77%
+  );
+  border-radius: 20px;
+  padding: 20px;
+  width: 100%;
+  margin-top: 40px;
+}
+.expenselist {
+  background: rgb(233, 57, 228);
+  background: linear-gradient(
+    180deg,
+    rgba(233, 57, 228, 1) 36%,
+    rgba(255, 147, 147, 1) 82%
+  );
+  border-radius: 20px;
+  padding: 20px;
+  width: 100%;
+  margin-top: 40px;
 }
